[package]
name = "enu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
ffmpeg = { package = "ffmpeg-next", version = "6.1.1" }
iced = "0.13.0-dev"
iced_wgpu = "0.13.0-dev"
iced_winit = "0.13.0-dev"
image = "0.25.0"
pollster = { version = "0.3.0", features = ["macro"] }
wgpu = "0.19.3"

[patch.crates-io]
iced = { path = "./iced" }
iced_wgpu = { path = "./iced/wgpu" }
iced_winit = { path = "./iced/winit" }